fix: increase spacing, font sizes

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -90,6 +90,9 @@ h6 {
   margin-left: 3em;
   width: 70%;
 }
+.card p {
+  max-width: 66ch;
+}
 .card p:nth-child(2) {
   margin-top: 1em;
 }
@@ -100,7 +103,7 @@ h6 {
   font-style: italic;
 }
 .card hr {
-  margin: 2em 0;
+  margin: 3em 0;
 }
 
 .headline-with-year {
@@ -190,37 +193,36 @@ h6 {
 
 h1 {
   font-family: "Inter", sans-serif;
-  font-size: 3rem;
-  font-weight: 600;
+  font-size: 4rem;
+  font-weight: 700;
   letter-spacing: -0.2rem;
 }
 
 h2 {
   color: #475569;
-  font-size: 2rem;
-  font-weight: 400;
-  letter-spacing: -0.125rem;
+  font-size: 2.5rem;
+  font-weight: 500;
+  letter-spacing: -0.15rem;
   margin-top: 0.25em;
 }
 
 h3 {
-  font-size: 1.75rem;
-  font-weight: 600;
+  font-size: 2rem;
+  font-weight: 700;
   letter-spacing: -0.1rem;
   line-height: 1.125;
   position: relative;
 }
 
 h4 {
-  font-size: 1.5rem;
-  font-weight: 500;
+  font-size: 1.75rem;
+  font-weight: 600;
   letter-spacing: -0.05rem;
 }
 
 h5 {
   color: #475569;
-  font-size: 1.125rem;
-  font-style: italic;
+  font-size: 1.5rem;
   font-weight: 300;
   margin-top: 0.125em;
 }
@@ -270,7 +272,7 @@ h5 {
 }
 .project__image {
   border-radius: 0.125em;
-  margin-top: 1em;
+  margin-top: 2em;
   width: 250px;
 }
 .project__links {
@@ -294,7 +296,7 @@ h5 {
   color: #1e293b;
 }
 .project__description {
-  margin-top: 1em;
+  margin-top: 2em;
 }
 
 .project-small > a {
@@ -347,7 +349,7 @@ h5 {
     flex-direction: column;
   }
   .project__image {
-    margin: 1em auto;
+    margin: 2em auto;
   }
   .project__links {
     column-gap: 3em;
@@ -365,7 +367,7 @@ body {
   color: #475569;
   display: flex;
   font-family: "Inter", sans-serif;
-  font-size: 18px;
+  font-size: 1.25rem;
   justify-content: center;
   overflow-x: hidden;
   padding: 4em;
